examples/__outputs__/20_output/output_preset__standard-graphql.output.test.txt
/some/path/to/runPipeline.ts:XX
          return new ContextualError(message, { hookName: signal.hookName, source: signal.source }, signal.error)
                 ^


ContextualError: There was an error in the core implementation of hook "exchange".
    at runPipeline (/some/path/to/runPipeline.ts:XX:18)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:14)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:14)
    at async <anonymous> (/some/path/to/runner.ts:XX:20)
    at async Module.run (/some/path/to/run.ts:XX:10)
    at async sendRequest (/some/path/to/send.ts:XX:18)
    at async <anonymous> (/some/path/to/output_preset__standard-graphql.ts:XX:16) {
  cause: TypeError: Failed to parse URL from undefined
      at node:internal/deps/undici/undici:13510:13
      at async Object.run (/some/path/to/TransportHttp.ts:XX:28)
      at async runStep (/some/path/to/runStep.ts:XX:16) {
    [cause]: TypeError: Invalid URL
        at new URL (node:internal/url:825:25)
        at new Request (node:internal/deps/undici/undici:9586:25)
        at fetch (node:internal/deps/undici/undici:10315:25)
        at fetch (node:internal/deps/undici/undici:13508:10)
        at fetch (node:internal/bootstrap/web/exposed-window-or-worker:75:12)
        at Object.fetch (/some/path/to/TransportHttp.ts:XX:85)
        at Object.run (/some/path/to/TransportHttp.ts:XX:40)
        at Object.run (/some/path/to/Pipeline.ts:XX:51)
        at runStep (/some/path/to/runStep.ts:XX:37)
        at <anonymous> (/some/path/to/runStep.ts:XX:14) {
      code: 'ERR_INVALID_URL',
      input: 'undefined'
    }
  },
  context: { hookName: 'exchange', source: 'implementation' }
}

Node.js vXX.XX.XX